--- a/_posts/2020-05-04-a.md
+++ b/_posts/2020-05-04-a.md
@@ -5,6 +5,7 @@ published: true
 title: a
 date: 2020-05-04 09:50am
 author: a
+image: /assets/img/posts/95567840_1753913364750769_977899650264596480_o.jpg
 description: a
 tags: a
 ---
